# hovernext

./: CLAUDE.md  data.py  evaluate.py  main.py  predict.py  pyproject.toml  train.py
pannuke_metrics_master/: utils.py
sample_configs/: train_pannuke.toml
src/: data_utils.py  inference_utils.py  multi_head_unet.py  train_utils.py  validation.py
